--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "eslint": "^7.3.1",
     "gsap": "^3.3.4",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
