--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "axios-hooks": "^2.0.0",
     "eslint": "^7.3.1",
     "gsap": "^3.3.4",
     "history": "^5.0.0",
