--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-audio-player": "^0.13.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
